dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/ibp_server_mt.c)

dnl Checks for system 
AC_CANONICAL_SYSTEM
dnl AC_CANONICAL_HOST

dnl setup IBP version
version_major="1.3.1"
version_minor=""
AC_SUBST(version_major)
AC_SUBST(version_minor)

dnl automake 
AM_CONFIG_HEADER(include/config-ibp.h)
AM_INIT_AUTOMAKE("ibp","${version_major}${version_minor}")

dnl setup default prefix 
AC_PREFIX_DEFAULT("`pwd`/local")
TOP_SRCDIR="`pwd`"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_GCC_TRADITIONAL
AC_PROG_INSTALL
AC_AIX
AC_PROG_CXX
AC_FUNC_ALLOCA
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LN_S

dnl Checks for large file support
AC_SYS_LARGEFILE

dnl Checks for libtool
AC_DISABLE_SHARED
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

dnl Checks for libraries.
AC_CHECK_LIB(pthread,pthread_create,,AC_CHECK_LIB(pthread,__pthread_mutex_init))
dnl Check for freeBSD
AC_CHECK_LIB(c_r,pthread_create) 
AC_CHECK_LIB(socket, connect)
AC_CHECK_LIB(nsl,getaddrinfo)
AC_CHECK_LIB(nsl,gethostbyname)
AC_CHECK_LIB(m,pow)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/file.h sys/time.h unistd.h ctype.h)
AC_CHECK_HEADERS(sys/utsname.h sys/wait.h sys/stat.h sys/select sys/un.h)
AC_CHECK_HEADERS(pthread.h ,  , AC_MSG_ERROR("Can not find pthread.h!"))
if test "$ac_cv_header_pthread_h" != "yes"; then
    PTHREAD_SUPPORTED=0
else
    PTHREAD_SUPPORTED=1
fi
AC_SUBST(PTHREAD_SUPPORTED)
AC_CHECK_HEADERS( sys/mman.h arpa/inet.h  sys/socket.h netinet/in.h netdb.h)
AC_CHECK_HEADERS(sys/statvfs.h sys/vfs.h sys/resource.h sys/socketvar.h)
AC_CHECK_HEADERS(sys/param.h sys/types.h sys/mount.h sys/sockio.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
TYPE_SOCKLEN_T
TYPE_INT64_T
AC_CHECK_TYPE(ulong_t, unsigned long int)
AC_CHECK_TYPE(ushort_t, unsigned short int)

dnl checking struct addrinfo 
AC_CHECK_MEMBERS([struct addrinfo.ai_family],,,[#include <netdb.h>])
if test "$ac_cv_member_struct_addrinfo_ai_family" = "yes"; then
    HAVE_STRU_ADDRINFO=1
else
    HAVE_STRU_ADDRINFO=0
fi
AC_CHECK_MEMBERS([struct statvfs64.f_bsize],,,[#include <sys/statvfs.h>])
AC_CHECK_MEMBERS([struct sockaddr_in.sin_len],,,[#include <stdio.h>
                                                 #include <netinet/in.h>])
dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gettimeofday select socket strdup strerror uname)
AC_CHECK_FUNCS(statvfs statfs)
AC_CHECK_FUNCS(getaddrinfo freeaddrinfo)
AC_CHECK_FUNCS(getrlimit setrlimit)
AC_CHECK_FUNCS(statvfs64)
if test "$ac_cv_func_getaddrinfo" = "yes"; then
    HAVE_FUNC_GETADDRINFO=1
else
    HAVE_FUNC_GETADDRINFO=0
fi

OSF_OS=0
dnl configure fails to check getaddrinfo correctly on osf 
case "$build_os" in
osf*)
    HAVE_FUNC_GETADDRINFO=1
    OSF_OS=1
esac
AC_SUBST(OSF_OS)

if test "$ac_cv_func_freeaddrinfo" = "yes"; then
    HAVE_FUNC_FREEADDRINFO=1
else
    HAVE_FUNC_FREEADDRINFO=0
fi
AC_SUBST(HAVE_STRU_ADDRINFO)
AC_SUBST(HAVE_FUNC_GETADDRINFO)
AC_SUBST(HAVE_FUNC_FREEADDRINFO)


dnl if test "x$prefix" = xNONE; then
dnl     PREFIX=$ac_default_prefix
dnl else
dnl     PREFIX=$prefix
dnl fi

dnl enable debug
AC_ENABLE_DEBUG

if test "x$enable_debug" = "xyes"; then
    AC_DEFINE(IBP_DEBUG)
fi

dnl build ibp client library only
AC_ENABLE_IBPCLIENT_ONLY
AM_CONDITIONAL(CLIENTONLY, test x$enable_clientonly = xyes )

AC_OUTPUT(Makefile src/Makefile include/Makefile include/ibp_errno.h
          include/ibp_net.h include/ibp_version.h src/BLASTER/Makefile
          src/TCP/Makefile src/MULTICAST/Makefile
          etc/Makefile doc/Makefile )
