dnl Process this file with autoconf to produce a configure script.
dnl AC_INIT("AES Encryption", 1.0, lors@cs.utk.edu)
AC_INIT(README)

AC_CANONICAL_SYSTEM
dnl AC_CANONICAL_HOST

dnl AC_CONFIG_SRCDIR([aes.h])
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libaes, 2.0)


case "$build_os" in 
darwin*)
    EXTRA_CFLAGS="-mdynamic-no-pic -faltivec -no-cpp-precomp"
    ;;
esac


dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB
AC_PROG_INSTALL


dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([memory.h stdlib.h sys/param.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT( Makefile )
