includedir=@prefix@/include/@PACKAGE@
include_HEADERS = ibp_ClientLib.h ibp_errno.h ibp_os.h ibp_protocol.h ibp_nfu.h  
pkgincludedir=@prefix@/include
pkginclude_HEADERS = ibp.h

EXTRA_DIST = config-ibp.h.in dlist.h dtmv.h fields.h ibp_base.h \
ibp_ComMod.h ibp_net.h ibp_server.h ibp-slm.h ibp_thread.h  \
ibp_unixlib.h ibp_uri.h ibp_nfud.h ibp_nfu_para.h ibp_resources.h \
ibp-lib.h ibp_version.h.in jrb.h jval.h \
fat.h fs.h mDNSDebug.h mDNSPlatformFunctions.h mDNSPosix.h mDNSUNP.h \
mDNSClientAPI.h ibp_mdns.h ibp_authentication.h \
ibp_request.h ibp_request_queue.h ibp_connection.h ibp_log.h ibp_thread_pool.h
