includedir=@prefix@/include/@PACKAGE@
include_HEADERS = ibp_ClientLib.h ibp_errno.h ibp_os.h ibp_protocol.h  
pkgincludedir=@prefix@/include
pkginclude_HEADERS = ibp.h

EXTRA_DIST = config-ibp.h.in dlist.h dtmv.h fields.h ibp_base.h ibp_ComMod.h ibp-lib.h ibp_net.h ibp_server.h ibp-slm.h ibp_thread.h ibp_thread_log.h ibp_unixlib.h ibp_uri.h  ibp_queue.h ibp_version.h.in jrb.h jval.h stamp-h.in 
